2007-02-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/menu.py:
	Add Alt+N accelerators for project menu items.

2007-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/pref-dialog.glade:
	Fix preview command fields and expand settings on the file page.

2007-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	Initial svn import of the seija branch leading to 0.8.

2006-12-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* data/glade/encoding-dialog.glade:
	* data/glade/lang-dialog.glade:
	* data/glade/open-widgets.glade:
	* data/glade/pref-dialog.glade:
	* data/glade/previewerr-dialog.glade:
	* data/glade/save-widgets.glade:
	* gaupol/gtk/dialogs:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/debug.py:
	* gaupol/gtk/dialogs/encoding.py:
	* gaupol/gtk/dialogs/file.py:
	* gaupol/gtk/dialogs/glade.py:
	* gaupol/gtk/dialogs/lang.py:
	* gaupol/gtk/dialogs/message.py:
	* gaupol/gtk/dialogs/pref.py:
	* gaupol/gtk/dialogs/previewerr.py:
	* gaupol/gtk/dialogs/test:
	* gaupol/gtk/dialogs/textedit.py:
	Added.

2006-12-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/gaupol.1:
	* gaupol/gtk/main.py:
	Added new options to select translation and video files.

	* gaupol/common/filelib.py:
	* gaupol/common/enclib.py (get_locale_encoding):
	Return None instead of raising ValueError if no locale found.

	* gaupol/common/util.py (chardet_available, enchant_available):
	New functions.

	* gaupol/gtk/common/gtklib.py:
	(get_glade_xml): Added 'root' argument.
	(set_button): New function.

2006-12-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/common/test/test_util.py:
	* gaupol/common/util.py:
	* gaupol/common/wwwlib.py:
	(util.get_chardet_version, util.get_desktop_environment,
	util.get_enchant_version): New functions.

	* gaupol/gtk/common/gtklib.py (INSERT_CURSOR): New attribute.

2006-12-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/preview.py:
	* gaupol/agents/register.py: